--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
 
 </div>
 
+<div id="cc">
+
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br>
+
+<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Globalization of the United States, 1789-1861</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://globalization1789-1861.indiana.edu/exhibit/about" property="cc:attributionName" rel="cc:attributionURL">Konstantin Dierks</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+
+</div>
+
 <div id="bottom-map">
 </div>
 
